@@ -2,97 +2,98 @@ package com.driver;
 
 import java.util.ArrayList;
 import java.util.Date;
-import java.util.LinkedList;
+import java.util.List;
 
 public class Gmail extends Email {
 
-    int inboxCapacity; //maximum number of mails inbox can store
+    private int inboxCapacity;
+    private List<Mail> Inbox;
+    private List<Mail> Trash;
+     //maximum number of mails inbox can store
     //Inbox: Stores mails. Each mail has date (Date), sender (String), message (String). It is guaranteed that message is distinct for all mails.
     //Trash: Stores mails. Each mail has date (Date), sender (String), message (String)
-    LinkedList<Mail> inbox;
-    LinkedList<Mail> trash;
     public Gmail(String emailId, int inboxCapacity) {
-    	super(emailId);
-        this.inboxCapacity = inboxCapacity;
-        this.inbox = new LinkedList<>();
-        this.trash = new LinkedList<>();
+        super(emailId);
+        this.inboxCapacity=inboxCapacity;
+        Inbox=new ArrayList<>();
+        Trash=new ArrayList<>();
     }
+
+
 
     public void receiveMail(Date date, String sender, String message){
         // If the inbox is full, move the oldest mail in the inbox to trash and add the new mail to inbox.
         // It is guaranteed that:
         // 1. Each mail in the inbox is distinct.
         // 2. The mails are received in non-decreasing order. This means that the date of a new mail is greater than equal to the dates of mails received already.
-    	 if (inbox.size() == inboxCapacity) {
-             Mail mail = inbox.removeFirst();
-             trash.addLast(mail);
-         }
-         inbox.addLast(new Mail(date,sender,message));
+
+        if(Inbox.size()==inboxCapacity){
+            Mail mail = Inbox.get(0);
+            Inbox.remove(0);
+            Trash.add(mail);
+        }
+        Inbox.add(new Mail(date,sender,message));
     }
 
     public void deleteMail(String message){
         // Each message is distinct
         // If the given message is found in any mail in the inbox, move the mail to trash, else do nothing
-    	for (Mail mail : inbox) {
-            if (mail.message.equals(message)) {
-                inbox.remove(mail);
-                trash.addLast(mail);
-                return;
+        for(int i=0;i< Inbox.size();i++){
+            Mail x = Inbox.get(i);
+            if(x.getMessage().equals(message)){
+                Trash.add(x);
+                Inbox.remove(i);
             }
         }
-
     }
 
     public String findLatestMessage(){
         // If the inbox is empty, return null
         // Else, return the message of the latest mail present in the inbox
-    	 if (inbox.isEmpty()) {
-             return null;
-         }
-         return inbox.getLast().message;
-
+        if(Inbox.isEmpty()){
+            return null;
+        }
+        return Inbox.get(Inbox.size()-1).getMessage();
     }
 
     public String findOldestMessage(){
         // If the inbox is empty, return null
         // Else, return the message of the oldest mail present in the inbox
-    	if (inbox.isEmpty()) {
+        if(Inbox.isEmpty()){
             return null;
         }
-        return inbox.getFirst().message;
-
+        return Inbox.get(0).getMessage();
     }
 
     public int findMailsBetweenDates(Date start, Date end){
         //find number of mails in the inbox which are received between given dates
         //It is guaranteed that start date <= end date
-    	 int count = 0;
-    	    for (Mail mail : inbox) {
-    	        if (mail.date.compareTo(start) >= 0 && mail.date.compareTo(end) <= 0) {
-    	            count++;
-    	        }
-    	    }
-    	    return count;
-
+        int cnt=0;
+       for (int i = 0; i < Inbox.size(); i++) {
+            if(Inbox.get(i).getDate().compareTo(start)>=0 && Inbox.get(i).getDate().compareTo(end)<=0){
+                cnt++;
+            }
+        }
+       return cnt;
     }
 
     public int getInboxSize(){
         // Return number of mails in inbox
-    	return inbox.size();
+        return Inbox.size();
     }
 
     public int getTrashSize(){
         // Return number of mails in Trash
-    	return trash.size();
+        return Trash.size();
     }
 
     public void emptyTrash(){
         // clear all mails in the trash
-    	trash.clear();
+        Trash.clear();
     }
 
     public int getInboxCapacity() {
         // Return the maximum number of mails that can be stored in the inbox
-    	return inboxCapacity;
+        return inboxCapacity;
     }
 }
